--- a/css/business-frontpage.css
+++ b/css/business-frontpage.css
@@ -12,10 +12,20 @@ body, html {
 }
 .bg-primary {
   background-color: #4158d0!important;
+
+} 
+
+
+.bg-dark {
+  background-color: #4158d0;
 }
 .center {
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 50%;
+}
+
+.h2-pg {
+  color : White
 }
