--- a/css/business-frontpage.css
+++ b/css/business-frontpage.css
@@ -11,7 +11,7 @@ body, html {
 	font-family: Poppins-Regular, sans-serif;
 }
 .bg-primary {
-  background-color: #4158d0!important;
+  background-color: #0072fff2!important;
 
 } 
 
