--- a/Buy_tokens/css/main.css
+++ b/Buy_tokens/css/main.css
@@ -640,3 +640,31 @@ input {
     padding: 50px 40px;
   }
 }
+
+.title {
+  color: grey;
+  font-size: 25px;
+}
+
+button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+}
+
+a {
+  text-decoration: none;
+  font-size: 22px;
+  color: black;
+}
+
+button:hover, a:hover {
+  opacity: 0.7;
+}
