--- a/main.css
+++ b/main.css
@@ -4,6 +4,10 @@ body {
     padding: 2em;
     font-family: 'Raleway','Source Sans Pro', 'Arial';
 }
+
+.aboutBody {
+    background-color:rgb(15, 64, 155);
+}
 .container {
     width: 50%;
     margin: 0 auto;
@@ -34,3 +38,14 @@ button {
     background-color:#fff;
     margin: 1em 0;
 }
+
+.about-section_1{
+    background-image: url("images/freedom.jpg");
+}
+
+.about_heading {
+    font-weight: bold
+}
+
+
+  
