--- a/css/business-frontpage.css
+++ b/css/business-frontpage.css
@@ -8,7 +8,7 @@ title {
 }
 body, html {
 	height: 100%;
-	font-family: Poppins-Regular, sans-serif;
+	font-family:Verdana;
 }
 .bg-primary {
   background-color: #4158d0 ;
@@ -38,3 +38,18 @@ body, html {
   color : #4158d0;
 }
 
+.color-box 
+{text-align: center;
+  font-size: 60px; 
+  background-color: aliceblue; 
+  width:100%; 
+  height:auto; 
+  padding:5%;}
+
+  .color-box2
+{text-align: center;
+  font-size: 40px; 
+  background-color: aliceblue; 
+  width:100%; 
+  height:auto; 
+  padding:5%;}
